exports[`test should mount with no items 1`] = `
<MultiSelectList
  isDivided={false}>
  <List
    isDivided={false}>
    <ul
      className="list" />
  </List>
</MultiSelectList>
`;

exports[`test should mount with one item 1`] = `
<MultiSelectList
  isDivided={false}>
  <List
    isDivided={false}>
    <ul
      className="list">
      <ListItem
        className="stuff1"
        content={
          <p>
            text1
          </p>
        }
        isSelectable={true}
        isSelected={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0">
        <li
          className="list-item is-selectable stuff1"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0">
          <p>
            text1
          </p>
        </li>
      </ListItem>
    </ul>
  </List>
</MultiSelectList>
`;

exports[`test should render a default component 1`] = `
<List
  isDivided={false} />
`;

exports[`test should render with a selectable and non-selectable item 1`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    isSelectable={false}
    isSelected={false} />
</List>
`;

exports[`test should render with isDivided 1`] = `
<List
  isDivided={true}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should render with items 1`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item when maxSelectionCount is 2 1`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item when maxSelectionCount is 2 2`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item when maxSelectionCount is 2 3`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item when maxSelectionCount is 2 4`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;
